fix: Do not wrap Frantisek

--- a/frontend/src/landing.scss
+++ b/frontend/src/landing.scss
@@ -116,6 +116,10 @@ html[lang="ru"] {
   }
 }
 
+.groom-name {
+  white-space: nowrap;
+}
+
 .kacky-img {
   max-width: 60rem;
   width: 100%;
